Moved stuff ContextualHttpRequest proto Stuff a bit broken but hey, the module hasn't been officially announced yet ;-)

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 
 	<properties>
 		<arquillian.version>1.0.0.Alpha1</arquillian.version>
+		<weld.version>1.0.1-Final</weld.version>
 	</properties>
 
 	<repositories>
@@ -76,6 +77,11 @@
 			<groupId>org.jboss.weld</groupId>
 			<artifactId>weld-extensions</artifactId>
 			<version>1.0.0.Alpha1</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.jboss.weld</groupId>
+			<artifactId>weld-core</artifactId>
+			<version>${weld.version}</version>
 		</dependency>		
 
 		<!-- Test Dependencies -->
