Don't listen on servlet context attrs, too soon

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 			<groupId>org.jboss.weld</groupId>
 			<artifactId>weld-extensions</artifactId>
 			<version>1.0.0.Alpha1</version>
+			<scope>provided</scope>
 		</dependency>		
 		<dependency>
 			<groupId>org.jboss.weld</groupId>
