--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<artifactId>seam-parent</artifactId>
 		<groupId>org.jboss.seam</groupId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
-	
-	<artifactId>seam-servlet</artifactId>
+
+	<artifactId>seam-servlet-parent</artifactId>
+	<groupId>org.jboss.seam.servlet</groupId>
 	<version>3.0.0-SNAPSHOT</version>
-	
-	<packaging>jar</packaging>
+
+	<packaging>pom</packaging>
 	<name>Seam Servlet Module</name>
-	
-	<developers>
-		<developer>
-			<name>Nicklas Karlsson</name>
-			<email>nickarls@gmail.com</email>
-			<roles>
-				<role>Project Lead</role>
-			</roles>
-		</developer>
-		<developer>
-			<name>Lincoln Baxter, III</name>
-			<email>lincolnbaxter@gmail.com</email>
-			<url>http://ocpsoft.com</url>
-			<organization>JBoss, by Red Hat</organization>
-			<organizationUrl>http://jboss.org</organizationUrl>
-			<timezone>EST</timezone>
-			<roles>
-				<role>Project Lead</role>
-			</roles>
-		</developer>
-	</developers>
+
+	<description>The Parent for Seam Servlet Module</description>
+	<url>http://www.seamframework.org</url>
+
+	<modules>
+		<module>api</module>
+		<module>impl</module>
+		<!--module>docs</module-->
+		<!--module>examples/??</module-->
+	</modules>
 
 	<properties>
 		<arquillian.version>1.0.0.Alpha1</arquillian.version>
@@ -78,12 +68,12 @@
 			<artifactId>weld-extensions</artifactId>
 			<version>1.0.0.Alpha1</version>
 			<scope>provided</scope>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.jboss.weld</groupId>
 			<artifactId>weld-core</artifactId>
 			<version>${weld.version}</version>
-		</dependency>		
+		</dependency>
 
 		<!-- Test Dependencies -->
 		<dependency>
@@ -106,10 +96,31 @@
 		</dependency>
 	</dependencies>
 
+	<developers>
+		<developer>
+			<name>Nicklas Karlsson</name>
+			<email>nickarls@gmail.com</email>
+			<roles>
+				<role>Project Lead</role>
+			</roles>
+		</developer>
+		<developer>
+			<name>Lincoln Baxter, III</name>
+			<email>lincolnbaxter@gmail.com</email>
+			<url>http://ocpsoft.com</url>
+			<organization>JBoss, by Red Hat</organization>
+			<organizationUrl>http://jboss.org</organizationUrl>
+			<timezone>EST</timezone>
+			<roles>
+				<role>Project Lead</role>
+			</roles>
+		</developer>
+	</developers>
+
 	<scm>
 		<connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/servlet/trunk</connection>
 		<developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/servlet/trunk</developerConnection>
-		<url>http://fisheye.jboss.org/browse/Seam/modules/servlet/trunk</url> 
+		<url>http://fisheye.jboss.org/browse/Seam/modules/servlet/trunk</url>
 	</scm>
-	
+
 </project>
