--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -13,7 +13,7 @@
 	<version>3.0.0-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
-	<name>Seam Servlet Module</name>
+	<name>Seam Servlet Module Core Implementation</name>
 
 	<dependencies>
 		<dependency>
