--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>seam-parent</artifactId>
-		<groupId>org.jboss.seam</groupId>
-		<version>3.0.0-SNAPSHOT</version>
+		<groupId>org.jboss.weld</groupId>
+		<artifactId>weld-parent</artifactId>
+		<version>9</version>
 	</parent>
 
 	<artifactId>seam-servlet-parent</artifactId>
@@ -27,9 +27,9 @@
 
 	<properties>
 		<arquillian.version>1.0.0.Alpha1</arquillian.version>
-		<weld.version>1.0.1-Final</weld.version>
+		<weld.api.version>1.0-SP1</weld.api.version>
 		<weldx.version>1.0.0-SNAPSHOT</weldx.version>
-		</properties>
+	</properties>
 
 	<repositories>
 		<repository>
@@ -43,6 +43,18 @@
 			<url>http://download.java.net/maven/glassfish/</url>
 		</repository>
 	</repositories>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.weld</groupId>
+				<artifactId>weld-api-bom</artifactId>
+				<version>${weld.api.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 
@@ -67,13 +79,8 @@
 		<dependency>
 			<groupId>org.jboss.weld</groupId>
 			<artifactId>weld-extensions</artifactId>
-			<version>${weldx.version}</version>			
+			<version>${weldx.version}</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.weld</groupId>
-			<artifactId>weld-core</artifactId>
-			<version>${weld.version}</version>
 		</dependency>
 
 		<!-- Test Dependencies -->
