--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 			<artifactId>weld-core</artifactId>
 			<version>1.0.1-Final</version>
 			<scope>provided</scope>
+         <optional>true</optional>
 		</dependency>
 
 		<!-- Environment Dependencies -->
