--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 		<arquillian.version>1.0.0-SNAPSHOT</arquillian.version>
 		<weld.api.version>1.0-SP1</weld.api.version>
 		<weldx.version>1.0.0-SNAPSHOT</weldx.version>
+		<slf4j.version>1.5.10</slf4j.version>
 	</properties>
 
 	<dependencies>
@@ -64,7 +65,7 @@
 			<artifactId>weld-core</artifactId>
 			<version>1.0.1-Final</version>
 			<scope>provided</scope>
-         <optional>true</optional>
+			<optional>true</optional>
 		</dependency>
 
 		<!-- Environment Dependencies -->
@@ -89,6 +90,12 @@
 			<groupId>org.jboss.weld</groupId>
 			<artifactId>weld-extensions</artifactId>
 			<version>${weldx.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
