--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -6,8 +6,10 @@
 		<artifactId>seam-servlet-parent</artifactId>
 		<groupId>org.jboss.seam.servlet</groupId>
 		<version>3.0.0-SNAPSHOT</version>
+      <relativePath>../pom.xml</relativePath>
 	</parent>
 
+   <groupId>org.jboss.seam.servlet</groupId>
 	<artifactId>seam-servlet</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
 
