--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,6 +6,7 @@
 		<artifactId>seam-servlet-parent</artifactId>
 		<groupId>org.jboss.seam.servlet</groupId>
 		<version>3.0.0-SNAPSHOT</version>
+      <relativePath>../pom.xml</relativePath>
 	</parent>
 	
 	<artifactId>seam-servlet-api</artifactId>
