--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>seam-servlet-api</artifactId>
             <version>${project.version}</version>
          </dependency>
+         
+         <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-extensions</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+         </dependency>
 
       </dependencies>
    </dependencyManagement>
