--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
          <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-extensions</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0.Alpha2</version>
          </dependency>
 
       </dependencies>
