update scm urls to reference git rather than svn

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,9 +17,9 @@
 	<name>Seam Servlet Module API</name>
 	
 	<scm>
-		<connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/servlet/trunk/api</connection>
-		<developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/servlet/trunk/api</developerConnection>
-		<url>http://fisheye.jboss.org/browse/Seam/modules/servlet/trunk/api</url> 
+		<connection>scm:git:git://github.com/seam/servlet.git</connection>
+		<developerConnection>scm:git:git@github.com:seam/servlet.git</developerConnection>
+		<url>http://github.com/seam/servlet</url> 
 	</scm>
 	
 </project>
