--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -26,9 +26,9 @@
 	</dependencies>
 
 	<scm>
-		<connection>scm:svn:http://anonsvn.jboss.org/repos/seam/modules/servlet/trunk/impl</connection>
-		<developerConnection>scm:svn:https://svn.jboss.org/repos/seam/modules/servlet/trunk/impl</developerConnection>
-		<url>http://fisheye.jboss.org/browse/Seam/modules/servlet/trunk/impl</url>
+		<connection>scm:git:git://github.com/seam/servlet.git</connection>
+		<developerConnection>scm:git:git@github.com:seam/servlet.git</developerConnection>
+		<url>http://github.com/seam/servlet</url>
 	</scm>
 
 </project>
