major refactoring to get ready for release
- unwrap servlet/request/session listener events, if applicable, before firing cdi event
- reenable most event tests
- add literals for event qualifiers to API
- implemented typed injections for request, header and cookie params (requires use of extension)
- add arquillian glassfish and jbossas container adapters to tests
- update documentation (add intro, document new features and changes)
- switch license from lgpl to aplv2
- bring pom update to date with seam parent and structure

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,11 +10,22 @@
 	</parent>
 	
 	<artifactId>seam-servlet-api</artifactId>
-	<groupId>org.jboss.seam.servlet</groupId>
 	<version>3.0.0-SNAPSHOT</version>
 	
 	<packaging>jar</packaging>
 	<name>Seam Servlet Module API</name>
+
+   <build>
+      <plugins>
+         <!-- No tests in the api, skip phase -->
+         <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <skipTests>true</skipTests>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 	
 	<scm>
 		<connection>scm:git:git://github.com/seam/servlet.git</connection>
