--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -27,8 +27,6 @@
          <groupId>org.jboss.weld</groupId>
          <artifactId>weld-extensions</artifactId>
          <scope>compile</scope>
-         <!-- temporary -->
-         <!--version>1.0.0-SNAPSHOT</version-->
       </dependency>
 
       <dependency>
@@ -92,6 +90,7 @@
          </dependencies>
       </profile>
       <profile>
+         <!-- To run tests, you must add -Djboss.i18n.generate-proxies=true to JBoss AS startup script -->
          <id>arq-jbossas-remote</id>
          <activation>
             <property>
