--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,45 @@
                <scope>provided</scope>
             </dependency>
          </dependencies>
+         <!-- skipping tests for the moment -->
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>
+                     <skip>true</skip>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+      <profile>
+         <id>arq-jbossas-remote</id>
+         <activation>
+            <property>
+               <name>arquillian</name>
+               <value>jbossas-remote</value>
+            </property>
+         </activation>
+         <dependencies>
+            <dependency>
+               <!-- Required until the Servlet 3.0 API can be resolved in Central -->
+               <groupId>org.jboss.spec.javax.servlet</groupId>
+               <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+               <scope>provided</scope>
+            </dependency>
+            <dependency>
+               <groupId>javax.enterprise</groupId>
+               <artifactId>cdi-api</artifactId>
+               <scope>provided</scope>
+            </dependency>
+            <dependency>
+               <groupId>javax.annotation</groupId>
+               <artifactId>jsr250-api</artifactId>
+               <scope>provided</scope>
+            </dependency>
+         </dependencies>
       </profile>
       <profile>
          <id>arq-glassfish-embedded</id>
