--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -30,6 +30,13 @@
       </dependency>
 
       <dependency>
+         <groupId>org.jboss.seam.catch</groupId>
+         <artifactId>seam-catch-api</artifactId>
+         <version>3.0.0.Alpha1</version>
+         <scope>compile</scope>
+      </dependency>
+
+      <dependency>
          <groupId>org.jboss.logging</groupId>
          <artifactId>jboss-logging</artifactId>
          <version>3.0.0.Beta4</version>
