--- a/docs/reference/pom.xml
+++ b/docs/reference/pom.xml
@@ -2,6 +2,13 @@
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
+   
+   <parent>
+      <groupId>org.jboss.seam.servlet</groupId>
+      <artifactId>seam-servlet-parent</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <relativePath>../pom.xml</relativePath>
+   </parent>
 
    <groupId>org.jboss.seam.servlet</groupId>
    <artifactId>seam-servlet-reference-guide</artifactId>
@@ -10,83 +17,58 @@
    <name>Seam Servlet Module Reference Guide</name>
 
    <properties>
-      <mpjdocbook.version>2.2.0</mpjdocbook.version>
       <pdf.name>${project.artifactId}.pdf</pdf.name>
    </properties>
 
-   <pluginRepositories>
-      <pluginRepository>
-         <id>repository.jboss.org</id>
-         <name>JBoss Repository</name>
-         <url>http://repository.jboss.org/maven2</url>
-      </pluginRepository>
-   </pluginRepositories>
-
    <build>
       <plugins>
+
          <plugin>
             <groupId>org.jboss.maven.plugins</groupId>
             <artifactId>maven-jdocbook-plugin</artifactId>
-            <version>${mpjdocbook.version}</version>
-            <extensions>true</extensions>
-            <dependencies>
-               <dependency>
-                  <groupId>org.jboss</groupId>
-                  <artifactId>jbossorg-docbook-xslt</artifactId>
-                  <version>1.1.0</version>
-               </dependency>
-               <dependency>
-                  <groupId>org.jboss</groupId>
-                  <artifactId>jbossorg-jdocbook-style</artifactId>
-                  <version>1.1.0</version>
-                  <type>jdocbook-style</type>
-               </dependency>
-            </dependencies>
-            <configuration>
-               <sourceDocumentName>master.xml</sourceDocumentName>
-               <masterTranslation>en-US</masterTranslation>
-               <imageResource>
-                  <directory>${project.basedir}/src/main/docbook/en-US</directory>
-                  <includes>
-                     <include>images/*.png</include>
-                     <include>images/*.jpg</include>
-                  </includes>
-               </imageResource>
-               <formats>
-                  <format>
-                     <formatName>pdf</formatName>
-                     <stylesheetResource>classpath://xslt/org/jboss/pdf.xsl</stylesheetResource>
-                     <finalName>${pdf.name}</finalName>
-                  </format>
-                  <format>
-                     <formatName>html</formatName>
-                     <stylesheetResource>classpath://xslt/org/jboss/xhtml.xsl</stylesheetResource>
-                     <finalName>index.html</finalName>
-                  </format>
-                  <format>
-                     <formatName>html_single</formatName>
-                     <stylesheetResource>classpath://xslt/org/jboss/xhtml-single.xsl</stylesheetResource>
-                     <finalName>index.html</finalName>
-                  </format>
-               </formats>
-               <options>
-                  <xincludeSupported>true</xincludeSupported>
-                  <xmlTransformerType>saxon</xmlTransformerType>
-                  <docbookVersion>1.72.0</docbookVersion>
-                  <transformerParameters>
-                     <property>
-                        <name>javax.xml.parsers.DocumentBuilderFactory</name>
-                        <value>org.apache.xerces.jaxp.DocumentBuilderFactoryImpl</value>
-                     </property>
-                     <property>
-                        <name>javax.xml.parsers.SAXParserFactory</name>
-                        <value>org.apache.xerces.jaxp.SAXParserFactoryImpl</value>
-                     </property>
-                  </transformerParameters>
-                  <localeSeparator>-</localeSeparator>
-               </options>
-            </configuration>
+         </plugin>
+
+         <!-- Attach docs as a war so dist can retrieve them -->
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>attach-zip</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>attach-artifact</goal>
+                  </goals>
+                  <configuration>
+                     <artifacts>
+                        <artifact>
+                           <file>${project.build.outputDirectory}/${project.artifactId}-${project.version}.war</file>
+                           <type>war</type>
+                        </artifact>
+                     </artifacts>
+                  </configuration>
+               </execution>
+            </executions>
          </plugin>
       </plugins>
    </build>
+
+   <profiles>
+      <profile>
+         <id>distribution</id>
+         <activation>
+            <property>
+               <name>release</name>
+            </property>
+         </activation>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-assembly-plugin</artifactId>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+   </profiles>
 </project>
