--- a/docs/reference/pom.xml
+++ b/docs/reference/pom.xml
@@ -1,18 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
       <groupId>org.jboss.seam.servlet</groupId>
       <artifactId>seam-servlet-parent</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.0.Alpha1</version>
       <relativePath>../../pom.xml</relativePath>
    </parent>
 
    <groupId>org.jboss.seam.servlet</groupId>
    <artifactId>seam-servlet-reference-guide</artifactId>
-   <version>3.0.0-SNAPSHOT</version>
+   <version>3.0.0.Alpha1</version>
    <packaging>jdocbook</packaging>
    <name>Seam Servlet Module Reference Guide</name>
 
