--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 --> 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
@@ -27,7 +26,7 @@
 
    <artifactId>seam-servlet-parent</artifactId>
    <groupId>org.jboss.seam.servlet</groupId>
-   <version>3.0.0-SNAPSHOT</version>
+   <version>3.0.0.Alpha1</version>
 
    <packaging>pom</packaging>
    <name>Seam Servlet Module</name>
