--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,12 +21,12 @@
    <parent>
       <artifactId>seam-servlet-parent</artifactId>
       <groupId>org.jboss.seam.servlet</groupId>
-      <version>3.0.0.Alpha1</version>
+      <version>3.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
    
    <artifactId>seam-servlet-api</artifactId>
-   <version>3.0.0.Alpha1</version>
+   <version>3.0.0-SNAPSHOT</version>
    
    <packaging>jar</packaging>
    <name>Seam Servlet Module API</name>
