--- a/docs/reference/pom.xml
+++ b/docs/reference/pom.xml
@@ -5,13 +5,13 @@
    <parent>
       <groupId>org.jboss.seam.servlet</groupId>
       <artifactId>seam-servlet-parent</artifactId>
-      <version>3.0.0.Alpha1</version>
+      <version>3.0.0-SNAPSHOT</version>
       <relativePath>../../pom.xml</relativePath>
    </parent>
 
    <groupId>org.jboss.seam.servlet</groupId>
    <artifactId>seam-servlet-reference-guide</artifactId>
-   <version>3.0.0.Alpha1</version>
+   <version>3.0.0-SNAPSHOT</version>
    <packaging>jdocbook</packaging>
    <name>Seam Servlet Module Reference Guide</name>
 
