additional features and documentation
- more tests for lifecycle events
- @Path qualifier for request-oriented lifecycle events
- ServletRequestContext type, lifecycle events and producers
- Catch integration
- character encoding filter
- literals for *Param annotations
- honor Cookie injection type for @CookieParam
- cleanup of docs
- remove ContextualHttpRequest

--- a/docs/reference/pom.xml
+++ b/docs/reference/pom.xml
@@ -69,5 +69,25 @@
             </plugins>
          </build>
       </profile>
+      <profile>
+         <id>preview</id>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.jboss.maven.plugins</groupId>
+                  <artifactId>maven-jdocbook-plugin</artifactId>
+                  <configuration>
+                     <formats>
+                        <format>
+                          <formatName>html</formatName>
+                          <stylesheetResource>classpath:/xslt/org/jboss/weld/xhtml.xsl</stylesheetResource>
+                          <finalName>index.html</finalName>
+                        </format>
+                     </formats>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
    </profiles>
 </project>
