--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -88,11 +88,13 @@
    <profiles>
       <profile>
          <id>default</id>
+         <!--
          <activation>
             <property>
                <name>!arquillian</name>
             </property>
          </activation>
+         -->
          <dependencies>
             <dependency>
                <groupId>org.jboss.arquillian.container</groupId>
@@ -109,7 +111,7 @@
             <dependency>
                <groupId>org.jboss.weld</groupId>
                <artifactId>weld-core</artifactId>
-               <scope>provided</scope>
+               <scope>test</scope>
                <optional>true</optional>
             </dependency>
             <dependency>
@@ -152,7 +154,7 @@
             <dependency>
                <groupId>org.jboss.weld</groupId>
                <artifactId>weld-core</artifactId>
-               <scope>provided</scope>
+               <scope>test</scope>
                <optional>true</optional>
             </dependency>
          </dependencies>
