--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -48,15 +48,8 @@
       <dependency>
          <groupId>org.jboss.seam.catch</groupId>
          <artifactId>seam-catch-api</artifactId>
-         <version>3.0.0.Alpha1</version>
-         <scope>compile</scope>
-         <exclusions>
-            <!-- workaround for seam catch marking this compile scope -->
-            <exclusion>
-               <groupId>javax.enterprise</groupId>
-               <artifactId>cdi-api</artifactId>
-            </exclusion>
-         </exclusions>
+         <version>3.0.0.Alpha2</version>
+         <scope>provided</scope>
       </dependency>
 
       <dependency>
