--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
    <artifactId>seam-servlet-parent</artifactId>
    <groupId>org.jboss.seam.servlet</groupId>
-   <version>3.0.0-SNAPSHOT</version>
+   <version>3.0.0.Alpha2</version>
 
    <packaging>pom</packaging>
    <name>Seam Servlet Module</name>
