--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -6,7 +6,7 @@
       <groupId>org.jboss.seam.servlet</groupId>
       <artifactId>seam-servlet-parent</artifactId>
       <version>3.0.0-SNAPSHOT</version>
-      <relativePath>../../pom.xml</relativePath>
+      <relativePath>../pom.xml</relativePath>
    </parent>
 
    <groupId>org.jboss.seam.servlet</groupId>
